refactor: 휴게시간/휴무주기 추가, 가게 삭제 전 연관데이터 삭제, 기타 리팩토링